# PhonemeExtractor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MakeVs2017DevEnvx64.bat  README.md  mkCodeBlocksNinjaDevEnv.sh  mkCodeLiteNinjaDevEnv.sh
DEV_ENV/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PhonemeExtractor.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
DEV_ENV/SourceCode/: PhonemeExtractor.vcxproj  PhonemeExtractor.vcxproj.filters  cmake_install.cmake
DEV_ENV/SourceCode/Debug/: PhonemeExtractor.ilk
DEV_ENV/SourceCode/PhonemeExtractor.dir/Debug/PhonemeExtractor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DEV_ENV/SourceCode/PhonemeExtractor_autogen/: mocs_compilation.cpp
DEV_ENV/SourceCode/PhonemeExtractor_autogen/EWIEGA46WW/: moc_phonemeextractormainwindow_Debug.cpp
DEV_ENV/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
QtMockups/MainWindow/PhonemeExtractor/: PhonemeExtractor.pro  main.cpp  phonemeextractormainwindow.cpp  phonemeextractormainwindow.ui
QtMockups/MainWindow/build-PhonemeExtractor-Desktop_Qt_5_10_1_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_phonemeextractormainwindow.h
QtMockups/MainWindow/build-PhonemeExtractor-Desktop_Qt_5_10_1_MSVC2017_64bit-Debug/debug/: PhonemeExtractor.ilk  moc_phonemeextractormainwindow.cpp
QtMockups/WaveformDisplayWidget/WaveformDisplayWidget/: WaveformDisplayWidget.h  WaveformDisplayWidget.pro  main.cpp
SoundFileToDtfMagFile/: CMakeLists.txt  main.cpp
SourceCode/: CMakeLists.txt  WaveformDisplayWidget.cpp  WaveformDisplayWidget.ui  phonemeextractormainwindow.h  phonemeextractormainwindow.ui
Submodules/: CMakeLists.txt
